# tg-rcore-tutorial-ch1-uart

./: Cargo.toml  README.md
tg-rcore-tutorial-test/: Cargo.toml  README.md  report.md
tg-rcore-tutorial-test/.github/workflows/: ci.yml
tg-rcore-tutorial-test/docs/: ch1-storage-lab.md  ch1-uart-lab.md  实验2.md  实验3.md
tg-rcore-tutorial-test/scripts/: install-git-subrepo.sh  migrate-to-subrepo.sh  publish-all.sh  rollback-subrepo.sh  subrepo-commands.sh
tg-rcore-tutorial-test/tg-ch4/: .cargo_vcs_info.json  Cargo.toml.orig
tg-rcore-tutorial-test/tg-ch4/tg-kernel-vm/: .cargo_vcs_info.json  Cargo.toml.orig
tg-rcore-tutorial-test/tg-ch5/: .cargo_vcs_info.json  Cargo.toml.orig
tg-rcore-tutorial-test/tg-ch6/: .cargo_vcs_info.json
tg-rcore-tutorial-test/tg-ch8/: .cargo_vcs_info.json  Cargo.toml.orig
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1/: .gitrepo
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-storage/: Cargo.toml  README.md  test.sh
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-storage/.cargo/: config.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-storage/src/: main.rs
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-uart/: build.rs
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-uart/src/: main.rs
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-uart1/: Cargo.toml  README.md  test.sh
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-uart1/.cargo/: config.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-uart1/src/: m_entry.asm  main.rs  uart.rs
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-uart2/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md  build.rs
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-uart2/.cargo/: config.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-uart2/docs/: llm-talks.md  session-ses_3223.md
tg-rcore-tutorial-test/tg-rcore-tutorial-ch1-uart2/src/: m_entry.asm  main.rs  uart.rs
tg-rcore-tutorial-test/tg-rcore-tutorial-ch2/: .gitrepo  Cargo.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch2/.cargo/: config.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch3/: .gitrepo  Cargo.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch3/.cargo/: config.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch4/: .gitrepo  Cargo.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch5/: .gitrepo  Cargo.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch5/.cargo/: config.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch6/: .gitrepo  Cargo.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch6/.cargo/: config.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch7/: .gitrepo  Cargo.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-ch7/.cargo/: config.toml
tg-rcore-tutorial-test/tg-rcore-tutorial-uart/: Cargo.toml  README.md
tg-rcore-tutorial-test/tg-rcore-tutorial-uart/src/: lib.rs
