[package]
name = "tg-rcore-tutorial-ch1-uart4"
description = "Chapter 1 minimal kernel variant that prints via S-mode UART driver."
version = "0.1.0-preview.1"
edition = "2024"
authors = ["tg-rcore contributors"]
repository = "https://github.com/jerryinsz/ai4ose-lab1-2026s/tree/main/tg-rcore-tutorial-ch1-uart"
homepage = "https://github.com/jerryinsz/ai4ose-lab1-2026s/tree/main/tg-rcore-tutorial-ch1-uart"
documentation = "https://docs.rs/tg-rcore-tutorial-ch1-uart"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ai", "ai4ose", "kernel", "learning", "os"]
categories = ["no-std", "embedded"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
tg-sbi = { package = "tg-rcore-tutorial-sbi", path = "../tg-rcore-tutorial-sbi", version = "0.4.8", features = ["nobios"] }
tg-uart = { package = "tg-rcore-tutorial-uart4", path = "../tg-rcore-tutorial-uart", version = "0.1.0-preview.1" }
