[package]
name = "tg-rcore-tutorial-ch1-storage"
description = "Chapter 1 minimal kernel variant with VirtIO block read/write in S-mode."
version = "0.1.0"
edition = "2024"
authors = ["tg-rcore contributors"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial-ch1-storage"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-ch1-storage"
documentation = "https://docs.rs/tg-rcore-tutorial-ch1-storage"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "storage", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
riscv = "0.10.1"
spin = "0.9"
virtio-drivers = "0.1.0"
tg-sbi = { package = "tg-rcore-tutorial-sbi", version = "0.4.8", features = ["nobios"] }
