[package]
name = "tg-rcore-tutorial-ch1-uart"
description = "Chapter 1 minimal kernel variant that prints via S-mode UART driver."
version = "0.1.0-preview.1"
edition = "2024"
authors = ["tg-rcore contributors"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial-ch1-uart"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-ch1-uart"
documentation = "https://docs.rs/tg-rcore-tutorial-ch1-uart"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "uart", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
