[package]
name = "tg-rcore-tutorial-uart4"
description = "Minimal UART16550 driver for rCore tutorial kernels in RISC-V S-mode."
version = "0.1.0-preview.1"
edition = "2024"
authors = ["tg-rcore contributors"]
repository = "https://github.com/jerryinsz/ai4ose-lab1-2026s/tree/main/tg-rcore-tutorial-uart"
homepage = "https://github.com/jerryinsz/ai4ose-lab1-2026s/tree/main/tg-rcore-tutorial-uart"
documentation = "https://docs.rs/tg-rcore-tutorial-uart"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ai", "ai4ose", "kernel", "learning", "os"]
categories = ["no-std", "embedded"]

[package.metadata.docs.rs]
targets = ["riscv64gc-unknown-none-elf"]

[dependencies]
